# simulator-C-

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  Shape.cpp  Shape.h  Vector.cpp  Vector.h  World.cpp  World.h  constants.h  demo.cpp  glfw_ship.cpp
player/: Player.cpp  Player.h  draw.cpp
shapes/: Circle.cpp  Circle.h  InnerCircle.cpp  InnerCircle.h
